--- a/main.html
+++ b/main.html
@@ -7,8 +7,72 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <table style="width: 100%; height: 100%">
-      <!-- Your code here -->
-    </table>
+    <table style="width: 100%; height: 100%" border="1px">
+  <tr>
+    <!-- Cell for Nested Table 2 -->
+    <td>
+      <table border=1px>
+        <tr>
+          <th colspan='2'>Nested Table 2</th>
+        </tr>
+        <tr>
+          <th>Column 1</td>
+          <th>Column 2</td>
+        </tr>
+        <tr>
+          <td>abc</td>
+          <td>def</td>
+        </tr>
+      </table>
+    </td>
+    
+    <!-- Cell for Nested Table 1 (List) -->
+    <td>
+      <table border="1px">
+        <tr>
+          <th>Nested Table 1</th>
+        </tr>
+        <tr>
+          <td>
+            <ul>
+              <li>List item</li>
+              <li>List item</li>
+              <li>List item</li>
+            </ul>
+          </td>
+        </tr>
+      </table>
+    </td>
+  </tr>
+  
+  <tr>
+    <!-- Cell for Nested Table 3 -->
+    <td>
+      <table border='1px'>
+        <tr>
+          <th colspan='2'>Nested Table 3</th>
+        </tr>
+        <tr>
+		  <td><a href="#">Nested Table</td>
+          <td>Demo Continued</td>
+        </tr>
+      </table>
+    </td>
+  
+  
+  
+    <!-- Cell for Nested Table 4 -->
+    <td>
+      <table class="nested-table">
+        <tr>
+          <th>Nested Table 4</th>
+        </tr>
+        <tr>
+          <td style="background-color:black ; color:white">HTML</td>
+        </tr>
+      </table>
+    </td>
+  </tr>
+</table>
   </body>
 </html>
