--- a/main.html
+++ b/main.html
@@ -63,7 +63,7 @@
   
     <!-- Cell for Nested Table 4 -->
     <td>
-      <table class="nested-table">
+      <table border="1px">
         <tr>
           <th>Nested Table 4</th>
         </tr>
